--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,7 +1,21 @@
+.app-wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
+.content {
+    flex: 1;
+}
+
 .footer {
+
+    font-family: 'Montserrat Alternates', sans-serif;
     background-color: #1D1D1D;
     padding: 20px 20px 20px;
     text-align: center;
+    margin-top: 40px;
 }
 
 .footer-columns {
