--- a/frontend/src/pages/recipe/Recipe.css
+++ b/frontend/src/pages/recipe/Recipe.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    padding: 16px 24px;
 }
 
 .recipe-card {
@@ -48,6 +49,7 @@
     background-color: #F5E8D5A1;
     padding: 20px;
     border-radius: 10px;
+
 }
 
 .steps h3{
