--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -10,7 +10,6 @@
 }
 
 .footer {
-
     font-family: 'Montserrat Alternates', sans-serif;
     background-color: #1D1D1D;
     padding: 20px 20px 20px;
@@ -31,9 +30,11 @@
 }
 
 .footer-heading {
+    font-family: 'Montserrat Alternates', sans-serif;
     color: #FFFFFF;
     font-weight: bold;
     margin-bottom: 12px;
+    font-size: 20px;
 }
 
 .footer-list {
