--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -4,14 +4,6 @@
     display: inline-block;
 }
 
-.recipe-card-wrapper {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-}
 .recipe-button {
     font-family: 'Montserrat Alternates', sans-serif;
     position: absolute;
@@ -142,12 +134,10 @@
     font-family: 'Montserrat Alternates', sans-serif;
     font-size: 2rem;
     font-weight: 600;
-    margin-bottom: 1rem;
 }
 
 .text-container p {
     font-family: 'Montserrat Alternates', sans-serif;
-    margin-bottom: 1.2rem;
     line-height: 1.6;
 }
 
@@ -160,4 +150,7 @@
 .link:hover {
     text-decoration: underline;
 }
+.list-wrapper {
+    font-family: 'Montserrat Alternates', sans-serif;
 
+}
