--- a/frontend/src/components/listCards/ListCards.css
+++ b/frontend/src/components/listCards/ListCards.css
@@ -2,7 +2,8 @@
     display: flex;
     overflow-x: auto;
     gap: 30px;
-    padding: 16px;
+    padding-top: 16px;
+    padding-bottom: 16px;
     scroll-snap-type: x mandatory;
     max-width: 100%;
     -webkit-overflow-scrolling: touch;
