--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -2,6 +2,7 @@
     font-family: 'Montserrat Alternates', sans-serif;
     position: relative;
     display: inline-block;
+    padding-top: 56px;
 }
 
 
@@ -41,7 +42,8 @@
 
 .trend-title {
     text-align: left;
-    padding: 40px 60px 20px;
+    padding-top: 40px;
+    padding-bottom: 20px;
     font-size: 28px;
     font-family: 'Montserrat Alternates', sans-serif;
     color:  #765638
@@ -51,7 +53,6 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    padding: 0 60px 60px;
 }
 
 .recipe-row {
@@ -110,7 +111,8 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -127,7 +129,7 @@
 }
 
 .cooking-image {
-    width: 100%;
+    width: 100vw;
     border-radius: 16px;
     object-fit: cover;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
