--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,13 @@
-* {
-    margin: 0;
+html, body {
+    min-height: 120vh;
     padding: 0;
-    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+    margin: 50px auto;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
 }
